# SUML

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt  test.py  train_model.py
.github/workflows/: ci.yml
app/: app.py  model.joblib  model_meta.json  predict.py
iris-kedro/: pyproject.toml
iris-kedro/conf/base/: catalog.yml
iris-kedro/src/iris_kedro/: __main__.py  pipeline_registry.py
iris-kedro/src/iris_kedro/pipelines/iris_training/: nodes.py  pipeline.py
tests/: test_app.py
