[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "iris_kedro"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.1.1",
]

[project.scripts]
iris-kedro = "iris_kedro.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "iris_kedro.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "iris_kedro"
project_name = "iris_kedro"
kedro_init_version = "1.1.1"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "57f85addd1db476ea0091ebc2873e674"
